--- a/Lab1cmake/CMakeLists.txt
+++ b/Lab1cmake/CMakeLists.txt
@@ -1,9 +1,5 @@
-﻿# CMakeList.txt: проект CMake для Lab1cmake; включите исходный код и определения,
-# укажите здесь логику для конкретного проекта.
-#
 cmake_minimum_required (VERSION 3.8)
 
-# Включение горячей перезагрузки для компиляторов MSVC, если поддерживается.
 if (POLICY CMP0141)
   cmake_policy(SET CMP0141 NEW)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
@@ -11,7 +7,6 @@ endif()
 
 project (Lab1cmake)
 
-# Добавьте источник в исполняемый файл этого проекта.
 add_library(core STATIC Core/employee.cpp Core/helpers.cpp)
 target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR}/Core)
 target_sources(core PRIVATE Core/employee.h Core/helpers.h)
@@ -29,7 +24,6 @@ if (CMAKE_VERSION VERSION_GREATER 3.12)
 	set(CMAKE_CXX_STANDARD_REQUIRED ON)
 endif()
 
-# TODO: Добавьте тесты и целевые объекты, если это необходимо.
 include(FetchContent)
 FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/refs/tags/v1.15.2.zip DOWNLOAD_EXTRACT_TIMESTAMP TRUE)
 enable_testing()
@@ -41,4 +35,5 @@ add_executable(UnitTest UnitTest.cpp)
 target_link_libraries(UnitTest PRIVATE core gtest_main)
 add_test(NAME UnitTest COMMAND Test)
 include(GoogleTest)
+gtest_discover_tests(UnitTest)
 gtest_discover_tests(UnitTest)
