--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.8)
 
 if (POLICY CMP0141)
   cmake_policy(SET CMP0141 NEW)
@@ -15,7 +15,7 @@ add_executable(Main main.cpp min_max.cpp average.cpp)
 target_link_libraries(Main PRIVATE core)
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-    set(CMAKE_CXX_STANDARD 20)
+    set(CMAKE_CXX_STANDARD 98)
     set(CMAKE_CXX_STANDARD_REQUIRED ON)
 endif()
 
