strict C++98 compliance and test target

--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -17,6 +17,13 @@ target_link_libraries(Main PRIVATE core)
 if (CMAKE_VERSION VERSION_GREATER 3.12)
     set(CMAKE_CXX_STANDARD 98)
     set(CMAKE_CXX_STANDARD_REQUIRED ON)
+    set(CMAKE_CXX_EXTENSIONS OFF)
+endif()
+
+if (MSVC)
+  add_compile_options(/W4 /permissive-)
+else()
+  add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 include(FetchContent)
@@ -25,8 +32,9 @@ enable_testing()
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(UnitTests UnitTests.cpp min_max.cpp average.cpp)
-target_link_libraries(UnitTests PRIVATE core gtest_main)
-add_test(NAME UnitTests COMMAND UnitTests)
+add_executable(Tests "tests.cpp" min_max.cpp average.cpp)
+target_link_libraries(Tests PRIVATE core gtest_main)
+add_test(NAME Tests COMMAND UnitTests)
 include(GoogleTest)
-gtest_discover_tests(UnitTests)
+gtest_discover_tests(Tests)
+add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure DEPENDS Tests)
