--- a/colloquium2/gateway_service/src/main/resources/application.properties
+++ b/colloquium2/gateway_service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8080
 spring.application.name=gateway-service
-backend.api.url=http://localhost:8081
 gateway.url=http://localhost:8080
+backend.api.url=${BACKEND_URL:http://localhost:8081}
